# rdmini

./: .gitignore  .travis.yml  AUTHORS.txt  CMakeLists.txt  README.md  building.html  demo_models.html  index.html
css/: default.css
demo/: demo_distribute.cc  demo_parse.cc  demo_sample.cc  demo_sim.cc  demo_ssa_direct.cc  demo_ssa_direct_qmc.cc  demo_timer_test.cc  models.yaml  parse_ssa_out.R  read_csv_list.R
devel/: index.html  simapi.html  validation_api.html
doc/: building.md  demo_models.md  index.md  invariants.md  simapi.md  validation_api.md
doc/css/: default.css
doc/devel/: index.md  sampler.md  simapi.md  validation_api.md
doc/src/: site.hs
doc/templates/: default.html
include/rdmini/: categorical.h  exceptions.h  parallel_ssa.h  rdmini_version.h  rdmodel.h  sampler.h  ssa_direct.h  ssa_pp_procsys.h  timer.h  vandercorput.h
rdmini/: check_valid.h  iterspan.h  named_collection.h  parallel_ssa.h  point.h  rdmini_version.h  rdmodel.cc  rdmodel.h  rdmodel_spec.h  rdsim.md  serial_ssa.h  small_map.h  ssa_common.h  ssa_direct.h  ssa_interface.h  ssa_pp_procsys.h  ssa_pp_procsys_par.h  timer.h  tiny_multiset.h  vandercorput.h  yamlview.h
rdmini/scratch/: rd_system.cc
scripts/: summarise-test-xml
src/: iterspan.h  point.h  range_seq.h  rdmodel.cc  yamlview.cc  yamlview.h
src/scratch/: point.h
test/: Main_TestAll.cc  test_check_valid.cc  test_dummy.cc  test_modelspec.cc  test_modelspecYaml.cc  test_modelspec_yaml.cc  test_small_map.cc  test_ssa_direct_qmc.cc  test_ssaapi.cc  test_tiny_multiset.cc  test_validity_checks.cc
(+9 files in other folders)
